--- a/index.html
+++ b/index.html
@@ -179,5 +179,109 @@
             </div>
         </div>
     </div>
+     <div id="testimonials">
+       <h1>Testimonials</h1>
+       <h2>Our satisfied customers say</h2>
+       <div class="testimonial-grid">
+           <div class="testimonial">
+               <img src="images/vg10.jpg" alt="">
+               <p>"I used to spend hours at the grocery store. Now, with this app, I've saved significant time and
+                   money."</p>
+               <h3>Kevin Andrew</h3>
+           </div>
+           <div class="testimonial">
+               <img src="images/vd2.jpg" alt="">
+               <p>"I've saved a significant
+                   time and money since
+                   using this app"</p>
+               <h3>Mary Jane</h3>
+           </div>
+           <div class="testimonial">
+               <img src="images/vg4.jpg" alt="">
+               <p>"I'd highly recommend
+                   this app to anyone
+                   looking for a affordable,
+                   and enjoyable grocery
+                   !"</p>
+               <h3>Eric Jackson</h3>
+           </div>
+       </div>
+   </div>
+   <div id="get-app">
+       <div>
+           <h1>Our App</h1>
+           <p>Get the app on Play Store and start shopping</p>
+           <button type="button" id="play-store"> <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="55"
+                   height="55" viewBox="0 0 48 48">
+                   <path fill="#4DB6AC"
+                       d="M7.705,4.043C7.292,4.15,7,4.507,7,5.121c0,1.802,0,18.795,0,18.795S7,42.28,7,43.091c0,0.446,0.197,0.745,0.5,0.856l20.181-20.064L7.705,4.043z">
+                   </path>
+                   <path fill="#DCE775"
+                       d="M33.237,18.36l-8.307-4.796c0,0-15.245-8.803-16.141-9.32C8.401,4.02,8.019,3.961,7.705,4.043l19.977,19.84L33.237,18.36z">
+                   </path>
+                   <path fill="#D32F2F"
+                       d="M8.417,43.802c0.532-0.308,15.284-8.825,24.865-14.357l-5.601-5.562L7.5,43.947C7.748,44.038,8.066,44.004,8.417,43.802z">
+                   </path>
+                   <path fill="#FBC02D"
+                       d="M41.398,23.071c-0.796-0.429-8.1-4.676-8.1-4.676l-0.061-0.035l-5.556,5.523l5.601,5.562c4.432-2.559,7.761-4.48,8.059-4.653C42.285,24.248,42.194,23.5,41.398,23.071z">
+                   </path>
+               </svg>
+               <div class="play-store">
+                   <p>GET IT ON</p>
+                   <h3>Google play</h3>
+               </div>
+           </button>
+       </div>
+       <div>
+           <img id="app-parts" src="images/mobilephone.png" alt="">
+       </div>
+   </div>
+   <div id="contact">
+       <div class="contact-us">
+           <div>
+               <h1>Get In Touch</h1>
+               <form>
+                   <div class="name">
+                       <input type="text" placeholder="Name" required>
+                       <input type="email" placeholder="Email" required>
+                   </div>
+                   <!-- <div class="name">
+                       <input type="tel" placeholder="Phone number" required>
+                       <input type="text" placeholder="Address" required>
+                   </div> -->
+                   <textarea placeholder="Message" required></textarea>
+                   <button type="submit" id="send-now">Send Now</button>
+               </form>
+           </div>
+           <div class="contact-info">
+               <h2>Reach Us</h2>
+               <p><svg xmlns="http://www.w3.org/2000/svg" width="36" height="26" viewBox="0 0 256 256"
+                       aria-hidden="true" focusable="false">
+                       <path fill="currentColor"
+                           d="M220.78 162.13L173.56 141a12 12 0 0 0-11.38 1a3.4 3.4 0 0 0-.38.28L137 163.42a3.93 3.93 0 0 1-3.7.21c-16.24-7.84-33.05-24.52-40.89-40.57a3.9 3.9 0 0 1 .18-3.69l21.2-25.21c.1-.12.19-.25.28-.38a12 12 0 0 0 1-11.36L93.9 35.28a12 12 0 0 0-12.48-7.19A52.25 52.25 0 0 0 36 80c0 77.2 62.8 140 140 140a52.25 52.25 0 0 0 51.91-45.42a12 12 0 0 0-7.13-12.45m-.78 11.45A44.23 44.23 0 0 1 176 212c-72.78 0-132-59.22-132-132a44.23 44.23 0 0 1 38.42-44a4 4 0 0 1 .48 0a4 4 0 0 1 3.67 2.49l21.11 47.14a4 4 0 0 1-.23 3.6l-21.19 25.2c-.1.13-.2.25-.29.39a12 12 0 0 0-.78 11.75c8.69 17.79 26.61 35.58 44.6 44.27a12 12 0 0 0 11.79-.87l.37-.28l24.83-21.12a3.93 3.93 0 0 1 3.57-.27l47.21 21.16a4 4 0 0 1 2.44 4.12" />
+                   </svg><strong>Phone:</strong> <br><span>+254 78678998</span>
+               </p>
+               <p>
+                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                       aria-hidden="true" focusable="false">
+                       <path fill="currentColor" fill-rule="evenodd"
+                           d="m4.2 5.2l7.56 5.67a.4.4 0 0 0 .48 0L19.8 5.2zm16.6.75l-7.84 5.88a1.6 1.6 0 0 1-1.92 0L3.2 5.95V18.8h17.6zM3 4h18a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1" />
+                   </svg>
+                   <strong>Email:</strong><br> <span>sokoconnect@gmail.com</span>
+               </p>
+               <p>
+                   <svg xmlns="http://www.w3.org/2000/svg" width="36" height="26" viewBox="0 0 256 256"
+                       aria-hidden="true" focusable="false">
+                       <path fill="currentColor"
+                           d="m185.79 148.42l-32-16a4 4 0 0 0-4 .25l-16.64 11.1a44.56 44.56 0 0 1-20.91-20.91l11.1-16.64a4 4 0 0 0 .25-4l-16-32A4 4 0 0 0 104 68a36 36 0 0 0-36 36a84.09 84.09 0 0 0 84 84a36 36 0 0 0 36-36a4 4 0 0 0-2.21-3.58M152 180a76.08 76.08 0 0 1-76-76a28 28 0 0 1 25.58-27.9l13.8 27.61l-11 16.54A4 4 0 0 0 104 124a52.43 52.43 0 0 0 28 28a4 4 0 0 0 3.76-.37l16.54-11l27.61 13.8A28 28 0 0 1 152 180M128 28a100 100 0 0 0-87.47 148.5l-11.9 35.69a12 12 0 0 0 15.18 15.18l35.69-11.9A100 100 0 1 0 128 28m0 192a92 92 0 0 1-46.07-12.35a4.05 4.05 0 0 0-2-.54a4 4 0 0 0-1.27.21l-37.38 12.46a4 4 0 0 1-5.06-5.06l12.46-37.38a4 4 0 0 0-.33-3.27A92 92 0 1 1 128 220" />
+                   </svg>
+                   <strong>WhatsApp:</strong><br> <span>+254 78678998</span>
+               </p>
+           </div>
+       </div>
+   </div>
+    <footer id="copyright">
+           <p >@Copyright 2025 reserved to Soko Connect</p>
+       </footer>
 </body>
 </html>
